experimental/parser/testdata/parser/syntax/proto4.proto.stderr.txt
error: unrecognized `syntax` declaration value
  --> testdata/parser/syntax/proto4.proto:1:10
   |
 1 | syntax = "proto4";
   |          ^^^^^^^^
   = note: treating the file as "proto2" instead
   = help: permitted values: "proto2", "proto3"

encountered 1 error
